--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-seoul/naver-login": "^3.0.0-rc.2",
     "react": "18.1.0",
     "react-native": "0.70.6"
   },
