--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,5 +22,13 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+      <activity
+        android:name="com.nhn.android.naverlogin.ui.OAuthLoginActivity"
+        android:screenOrientation="portrait"
+        android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+      <activity
+        android:name="com.nhn.android.naverlogin.ui.OAuthLoginInAppBrowserActivity"
+        android:label="OAuth2.0 In-app"
+        android:screenOrientation="portrait" />
     </application>
 </manifest>
